# priotag

./: .gitignore  README.md  VERIFICATION.md  docker-compose.ci.yml  docker-compose.dev-with-static.yml  docker-compose.dev.yml  docker-compose.yml  justfile  package-lock.json
.github/workflows/: build-and-sign.yml
admin_ui/: Dockerfile  package-lock.json  package.json
admin_ui/src/lib/: api.service.ts  auth.stores.ts  dashboard.types.ts  institution.types.ts
admin_ui/src/lib/components/: ConfirmDialog.svelte  QRCodeGeneratorModal.svelte  SidebarActions.svelte  UserEditModal.svelte  UserSubmissionsTable.svelte
admin_ui/src/routes/dashboard/: +page.svelte
admin_ui/src/routes/superadmin/: +page.svelte
backend/: Dockerfile  justfile  pyproject.toml
backend/load_tests/: .env.example  .gitignore  README.md  cleanup.py  config.py  justfile  locustfile.py  requirements.txt  utils.py
backend/load_tests/reports/: .gitkeep
backend/load_tests/scripts/: cleanup_users.py  run_basic.sh  run_spike.sh  run_stress.sh  run_web_ui.sh
backend/src/priotag/: main.py  utils.py
backend/src/priotag/api/routes/: account.py  admin.py  auth.py  health.py  institutions.py  priorities.py  vacation_days.py
backend/src/priotag/middleware/: security_headers.py
backend/src/priotag/models/: admin.py  auth.py  institution.py  pocketbase_schemas.py
backend/src/priotag/scripts/: create_institution.py  elevate_user_to_admin.py  initialize_admin_keypair.py  initialize_pocketbase.py
backend/src/priotag/services/: encryption.py  excel_generator.py  institution.py  user_cleanup_service.py
backend/tests/: conftest.py  test_permissions.py  test_priorities.py
backend/tests/integration/: conftest.py  setup_pocketbase.py  test_account_integration.py  test_admin_integration.py  test_auth_integration.py  test_institution_isolation_security.py  test_multi_institution_integration.py  test_priorities_integration.py  test_superadmin_integration.py  test_vacation_days_integration.py
backend/tests/services/: test_encryption.py  test_institution.py
frontend/: justfile
frontend/src/i18n/: i18n-types.ts
frontend/src/i18n/de/: index.ts
frontend/src/lib/: api.service.ts
frontend/src/routes/: +layout.svelte  +page.svelte
monitoring/: justfile
pocketbase/pb_migrations/: 1763490691_created_institutions.js  1763491038_updated_users.js  1763491172_updated_priorities.js  1763491326_updated_vacation_days.js  1763491343_updated_vacation_days.js  1763491377_updated_priorities.js  1763491454_deleted_system_settings.js  1763491799_created_institutionsView.js  1763497697_updated_users.js  1763499272_updated_institutions.js  1763500023_updated_institutionsView.js  1763500062_updated_institutionsView.js  1763500439_updated_institutionsView.js  1764021467_updated_users.js
pocketbase/pb_migrations/tmp/: 1763420233_created_institutions.js  1763420234_updated_users.js  1763420235_updated_priorities.js  1763420236_updated_vacation_days.js  1763420237_updated_system_settings.js  1763420238_updated_users_role.js
scripts/: QR_CODE_README.md  generate_qr_code.py  test-ci-locally.sh
(+5 files in other folders)
